# distributed-events-development-app

./: CMakeLists.txt  Kconfig  README.md  prj.conf  proposal.md  west.yml
boards/: nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_buttons_def.h
drivers/: CMakeLists.txt  Kconfig  zephyr,uart-ipc-service-backend.c
dts/bindings/: zephyr,uart-ipc-service-backend.yaml
src/: main.c  ping_event.c  ping_event.h  pong_event.c  pong_event.h  shared_event.c  shared_event.h
src/modules/: led_module.c
tests/drivers/: CMakeLists.txt  Kconfig  driver_test.c  prj.conf
